--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
                         name = name.charAt(0).toUpperCase() + name.slice(1);
                         return { name, href };
                     });
+                if files.length == 0 {
+                    files = [
+                        {
+                            "name": "模拟太阳系",
+                            "href": "solar_system.html"
+                        },
+                        {
+                            "name": "电子烟花",
+                            "href": "fireworks.html"
+                        },
+                        {
+                            "name": "学习英语",
+                            "href": "learn_english.html"
+                        }
+                        ]
+                }
                 
                 return files;
             } catch (error) {
