--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
                         {
                             name: "学习英语",
                             href: "learn_english.html"
+                        },
+                        {
+                            name: "代码转译",
+                            href: "code_escape.html"
                         }
+                
                         ]
             // try {
             //     const response = await fetch(window.location.href, {
