--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>资源导航中心</title>
+    <title>大胖的小作坊-收集/制作好玩的工具、小游戏</title>
     <style>
         :root {
             --primary-color: #4a90e2;
