--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@
                 icon: "📚️"
             },
             {
+                name: "奥特曼",
+                href: "learn_english.html",
+                category: "games",
+                desc: "智能英语学习助手",
+                icon: "🦑"
+            },
+            {
                 name: "代码转义",
                 href: "code_escape.html",
                 category: "tools",
