--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             },
             {
                 name: "奥特曼",
-                href: "learn_english.html",
+                href: "ultman.html",
                 category: "games",
                 desc: "智能英语学习助手",
                 icon: "🦑"
