--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 name: "奥特曼",
                 href: "ultman.html",
                 category: "games",
-                desc: "智能英语学习助手",
+                desc: "奥特曼打怪兽",
                 icon: "🦑"
             },
             {
