--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
         // 数据源
         const items = [
             {
+                name: "创意照片墙",
+                href: "dynamic_image_words.html",
+                category: "games",
+                desc: "将你的多张照片自动拼接成指定文字，还有动画效果",
+                icon: "☀️"
+            },
+            {
+                name: "情绪灭火器",
+                href: "emotion_extinguisher.html",
+                category: "games",
+                desc: "心中怒火快要控制不住了？赶紧来灭灭火！",
+                icon: "☀️"
+            },
+            {
                 name: "模拟太阳系",
                 href: "solar_system.html",
                 category: "games",
